fixed overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -161,6 +161,18 @@ button:hover {
   padding: 0.5rem 1rem;
   border-radius: 8px;
   border: 1px solid #555;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.floating-checkbox:hover {
+  border-color: var(--primary-color);
+}
+
+.floating-checkbox.checked {
+  border-color: #4a9eff;
+  background-color: #2d3b4d;
+  opacity: 1;
 }
 
 .floating-button {
@@ -443,10 +455,9 @@ button:hover {
 
 .selected-effects-list {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-radius: 0 0 4px 4px;
   gap: .25rem;
-  
 }
 
 .selected-effects-container.reordering .effect-card {
@@ -515,7 +526,7 @@ button:hover {
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-top: 5px;
+  margin-top: 0.5rem !important;
 }
 
 .sub-sub-list li {
@@ -622,11 +633,16 @@ button:hover {
   font-size: 0.9em;
 }
 
-.effects-category>ul>li:not(.group-item):hover {
+.effects-category>ul>li:not(.group-item, .subgroup-item):hover {
   background-color: var(--primary-color) !important;
 }
 
-.effects-category>ul>li.group-item:hover:not(.hovered) {
+.effects-category>ul>li.group-item:hover:not(.hovered),
+.effects-category>ul>li.subgroup-item:hover:not(.hovered) {
+  background-color: transparent !important;
+}
+
+.subgroup-item {
   background-color: transparent !important;
 }
 
